<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/padding_top"
    android:paddingLeft="@dimen/padding_side"
    android:paddingStart="@dimen/padding_side"
    android:paddingRight="@dimen/padding_side"
    android:paddingEnd="@dimen/padding_side">

    <LinearLayout
        android:id="@+id/repoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_repo_url"
            android:textStyle="bold"/>

        <!-- Name of this repo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_repo_name"
            android:text="@string/repo_name"
            android:paddingTop="@dimen/form_label_top"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:id="@+id/text_repo_name"
            android:textStyle="bold"/>

        <!-- Description - as pulled from the index file during last update... -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_description"
            android:text="@string/repo_description"
            android:paddingTop="@dimen/form_label_top"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:scrollHorizontally="false"
            android:id="@+id/text_description"
            android:textStyle="bold"/>

        <!-- Number of apps belonging to this repo -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_num_apps"
            android:text="@string/repo_num_apps"
            android:paddingTop="@dimen/form_label_top" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_num_apps"
            android:textStyle="bold"/>

        <!-- The last time this repo was updated -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_last_update"
            android:text="@string/repo_last_update"
            android:paddingTop="@dimen/form_label_top" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_last_update"
            android:textStyle="bold"/>

        <!-- Signature (or "unsigned" if none) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_repo_fingerprint"
            android:text="@string/repo_fingerprint"
            android:paddingTop="@dimen/form_label_top" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:scrollHorizontally="false"
            android:id="@+id/text_repo_fingerprint"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:scrollHorizontally="false"
            android:id="@+id/text_repo_fingerprint_description"/>

        <!-- The last time this repo was updated -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_not_yet_updated"
            android:text="@string/repo_not_yet_updated"
            android:textStyle="bold"
            android:paddingTop="@dimen/form_label_top"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_centerHorizontal="true"
            android:text="@string/repo_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/qr_code"
            android:src="@drawable/swap_qr_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
