<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/qrWizardInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wifi_network" />

        <TextView
            android:id="@+id/qrWifiNetworkName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <ImageView
        android:id="@+id/qrWizardImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/qr_code" />

    <Button
        android:id="@+id/qrNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>
