<?xml version="1.0" encoding="utf-8"?>

<org.fdroid.fdroid.views.swap.StartSwapView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/swap_start_header"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_info_white"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textAlignment="center"
            android:text="@string/swap_intro"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bluetooth_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="@color/swap_grey_icon"
            android:src="@drawable/ic_bluetooth_white" />

        <TextView
            android:paddingStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swap_visible_bluetooth"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/device_id_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="SP-120"
            android:textColor="@color/swap_light_text"
            android:layout_weight="1.00"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_bluetooth" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:tint="@color/swap_grey_icon"
            android:src="@drawable/ic_network_wifi_white" />

        <LinearLayout
            android:paddingStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swap_not_visible_wifi"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="wifi network name"
                android:textColor="@color/swap_light_text"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swap_wifi_device_name"
            android:textColor="@color/swap_light_text"
            android:layout_weight="1.00"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_wifi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="5dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/swap_people_nearby"
            android:textColor="@color/swap_light_text"
            android:layout_weight="1.00"/>

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:indeterminate="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/no_people_nearby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textStyle="italic"
        android:textColor="@color/swap_light_text"
        android:text="@string/swap_no_peers_nearby"/>

    <ListView
        android:id="@+id/list_people_nearby"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swap_cant_find_peers"
        android:paddingStart="20dp"
        android:textColor="@color/swap_light_text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:drawableStart="@drawable/ic_fdroid_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:background="@android:color/transparent"
            android:text="@string/swap_send_fdroid"
            android:gravity="start|center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:drawableStart="@drawable/ic_qr_grey"
            android:drawablePadding="10dp"
            android:paddingStart="20dp"
            android:background="@android:color/transparent"
            android:text="@string/swap_scan_qr"
            android:gravity="start|center_vertical" />

    </LinearLayout>

</org.fdroid.fdroid.views.swap.StartSwapView>