<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="bottom"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        tools:context=".views.swap.SwapActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            >

        <ImageView
                android:id="@+id/wifi_icon_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wifi_ap_public"/>

        <TextView
                android:id="@+id/wifi_label_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_ap_public"/>

        <TextView
                android:id="@+id/wifi_warning_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_warning_public"/>

        <ImageView
                android:id="@+id/wifi_status_public"
                android:src="@drawable/swap_wifi_may_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

        <ImageView
                android:id="@+id/wifi_icon_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wifi_ap_private" />

        <TextView
                android:id="@+id/wifi_label_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_ap_private" />

        <TextView
                android:id="@+id/wifi_warning_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_warning_private" />

        <ImageView
                android:id="@+id/wifi_status_private"
                android:src="@drawable/swap_wifi_likely_to_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            >

        <ImageView
                android:id="@+id/wifi_icon_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wifi_ap_personal" />

        <TextView
                android:id="@+id/wifi_label_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_ap_personal" />

        <TextView
                android:id="@+id/wifi_warning_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_warning_personal" />

        <ImageView
                android:id="@+id/wifi_status_personal"
                android:src="@drawable/swap_wifi_likely_to_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
