<?xml version="1.0" encoding="utf-8"?>

<org.fdroid.fdroid.views.swap.SwapConnecting
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="30dp"
            android:textAlignment="center"
            android:text="@string/swap_connecting" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            tools:text="Downloading index from http://10.0.0.4:8888/fdroid/repo"
            android:padding="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error"
            android:text="@string/swap_connection_misc_error"
            android:padding="30dp"
            android:visibility="gone" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:text="@string/back"
            android:visibility="gone" />

</org.fdroid.fdroid.views.swap.SwapConnecting>